--- a/vue/package.json
+++ b/vue/package.json
@@ -11,7 +11,9 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "chart.js": "^2.9.4",
+    "chartjs-adapter-luxon": "^0.2.2",
     "core-js": "^3.6.5",
+    "luxon": "^1.26.0",
     "vue": "^2.6.12",
     "vue-chartjs": "^3.5.1",
     "vue-material": "^1.0.0-beta-15"
