--- a/nest/package.json
+++ b/nest/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^7.6.15",
     "@types/semver": "^7.3.4",
     "bluebird": "^3.7.2",
+    "dotenv": "^16.0.1",
     "pg": "^8.5.1",
     "pg-promise": "^10.9.5",
     "reflect-metadata": "^0.1.13",
