--- a/vue/package.json
+++ b/vue/package.json
@@ -10,15 +10,13 @@
   "dependencies": {
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
-    "chart.js": "^3.8.0",
-    "chartjs-adapter-luxon": "^1.1.0",
-    "chartjs-plugin-zoom": "^1.2.1",
+    "chart.js": "^2.9.4",
+    "chartjs-adapter-luxon": "^0.2.2",
     "core-js": "^3.6.5",
     "luxon": "^1.26.0",
-    "vue": "^2.6.14",
-    "vue-chartjs": "^4.1.1",
-    "vue-material": "^1.0.0-beta-15",
-    "vue-router": "^3.5.4"
+    "vue": "^2.6.12",
+    "vue-chartjs": "^3.5.1",
+    "vue-material": "^1.0.0-beta-15"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -28,7 +26,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "vue-cli-plugin-vuetify": "~2.3.1",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
