--- a/vue/package.json
+++ b/vue/package.json
@@ -16,7 +16,8 @@
     "luxon": "^1.26.0",
     "vue": "^2.6.12",
     "vue-chartjs": "^3.5.1",
-    "vue-material": "^1.0.0-beta-15"
+    "vue-material": "^1.0.0-beta-15",
+    "vue-router": "^2.8.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
