--- a/vue/package.json
+++ b/vue/package.json
@@ -3,44 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "serve": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src"
   },
   "dependencies": {
-    "bootstrap": "^4.6.0",
-    "bootstrap-vue": "^2.21.2",
-    "chart.js": "^2.9.4",
-    "chartjs-adapter-luxon": "^0.2.2",
+    "@popperjs/core": "^2.11.7",
+    "@vitejs/plugin-vue": "^1.6.1",
+    "bootstrap": "^5.2.3",
+    "bootstrap-vue-next": "^0.7.3",
+    "chart.js": "^4.2.1",
+    "chartjs-adapter-luxon": "^1.3.1",
     "core-js": "^3.6.5",
-    "luxon": "^1.26.0",
-    "vue": "^2.6.12",
-    "vue-chartjs": "^3.5.1",
-    "vue-material": "^1.0.0-beta-15",
-    "vue-router": "^2.8.1"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-cli-plugin-vuetify": "~2.3.1",
-    "vue-template-compiler": "^2.6.11"
+    "eslint": "^8.36.0",
+    "eslint-plugin-vue": "^8.7.1",
+    "luxon": "^3.3.0",
+    "vite": "^2.5.4",
+    "vue": "^3.2.47",
+    "vue-chartjs": "^5.2.0",
+    "vue-router": "^4.1.6"
   },
   "eslintConfig": {
     "root": true,
     "env": {
-      "node": true
+      "es2021": true
     },
     "extends": [
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
     "rules": {
       "vue/no-unused-components": "off",
       "no-unused-vars": "off"
@@ -50,5 +42,8 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "devDependencies": {
+    "unplugin-vue-components": "^0.24.1"
+  }
 }
