--- a/vue/package.json
+++ b/vue/package.json
@@ -15,6 +15,7 @@
     "bootstrap-vue-next": "^0.7.3",
     "chart.js": "^4.2.1",
     "chartjs-adapter-luxon": "^1.3.1",
+    "chartjs-plugin-annotation": "^2.2.1",
     "core-js": "^3.6.5",
     "eslint": "^8.36.0",
     "eslint-plugin-vue": "^8.7.1",
